updated font styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <section class="tool-section">
       <div class="section-heading">
-        <h1 class="text-preset-4">Reliable, efficient delivery <br><span class="text-preset-1">Powered by Technology</span></h1>
+        <h1 class="heading">Reliable, efficient delivery <br><span class="text-preset-1">Powered by Technology</span></h1>
         <p class="text-preset-4">Our Artificial Intelligence powered tools use millions of project data points 
     to ensure that your project is successful</p>
       </div>
